Closed Bug 196777 Opened 23 years ago Closed 23 years ago

[mailviews] [junk] primary email ddresses with capital letters do not appear after selecting the "People I Know" view

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4beta

People

(Reporter: nbaca, Assigned: sspitzer)

References

Details

(Whiteboard: [adt2])

Attachments

(1 file)

Trunk build 2003-03-10: Mac 10.1.5 Can't try windows due to bug# 196755. Overview: Addresses with capital letters do not appear after selecting the "People I Know" view. This problem occurs with any view where the Sender points to an address book. Steps to reproduce: 1. Add a card to the Personal Address Book where the email address includes atleast one capital letter (i.e. Smith@test.com) 2. Select the "People I Know" view, (People I Know = "Sender" "is in my address book" "Personal Address Book") Actual Results: Entries with capital letters in the email address do not appear. If I change the email address to include only lower case letters then it works. Expected Results: All entries should appear including email addresses that have capital letters.
Marking nsbeta1. Users are very likely to experience this problem since many addresses have capital letters (i.e. AOL accounts).
Keywords: nsbeta1
QA Contact: esther → nbaca
also on XP Pro SP1 platform & OS -> ALL
OS: MacOS X → All
Hardware: Macintosh → All
This also effects the junk mail filters
Summary: [mailviews] Addresses with capital letters do not appear after selecting the "People I Know" view → [mailviews] [junk] Addresses with capital letters do not appear after selecting the "People I Know" view
*** Bug 196689 has been marked as a duplicate of this bug. ***
Blocks: spamfe
Mail triage team: nsbeta1+/adt2
Keywords: nsbeta1 → nsbeta1+
Whiteboard: [adt2]
this is the hard part of bug #191798
Status: NEW → ASSIGNED
Depends on: 191798
Target Milestone: --- → mozilla1.4beta
actually, the fix might be simple, if I can use kLowerPriEmailColumn
Attached patch patch — — Splinter Review
this trick might be useful for our other case sensitivity problems, like with address collection, etc. I'll get a review from cavin.
Attachment #117578 - Flags: review?(cavin)
Comment on attachment 117578 [details] [diff] [review] patch r=cavin.
Attachment #117578 - Flags: review?(cavin) → review+
fixed. after all my red flag raising, the fix was simple.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified for mailviews. But i don't know how i can verify this for JUNK as i don't know how to track why a message is flagged JUNK or not. Thanks Seth for fixing this one! On to bug 187239 ;)
Summary: [mailviews] [junk] Addresses with capital letters do not appear after selecting the "People I Know" view → [mailviews] [junk] primary email ddresses with capital letters do not appear after selecting the "People I Know" view
Trunk build 2003-03-25: Mac 10.1.5, WinME, Linux RH 8 Fixed for the MailViews scenarios. Reassigning to Esther to check the Junk Mail scenarios.
QA Contact: nbaca → esther
Using trunk build 20030324 on winxp, macosx and linux this is fixed for Junk Mail Controls. Card has all lower case, sender has mix of upper case and lower case in email address. Mail is correctly listed as not junk when it comes in. Card has mixture of lower case and upper case, email address has only lower case in email address. Mail is correctly listed as not junk when it comes in. Verifying since the mailviews portion has already been verfied
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: