fix for bug #196777 [mailviews] case insensitivity in the "People I Know" view. [junk] case insensitivity in the junk mail white listing r=cavin, sr=bienvenu